# solid-elections-api

./: .gitignore  Dockerfile  README.md  app.ts  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
proxy/: Caddyfile
src/: app.ts  documentation_models.py  helper_sparql.py  main.py  models.py
