[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sam van der Kris <samvdkris@disroot.org>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.6.3"
peewee = "^3.13.3"
psycopg2-binary = "^2.8.5"
rdflib = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
